# python-devops-linuxtips

./: .gitignore  README.md
config/: README.md
projetos/ft/: README.md  pyproject.toml
projetos/ft/docs/: ft.html  index.html  search.js
projetos/ft/docs/ft/: cli.html
projetos/ft/src/ft/: __init__.py  cli.py  convert.py  watchdog.py
projetos/ft/tests/: test_cli.py
projetos/gancho/: README.md  gancho.service  gancho.socket  nginx_gancho  pyproject.toml  test.rest
projetos/gancho/deployment/my-username/my-repo/: deploy.sh
projetos/gancho/src/gancho/: __init__.py  core.py  utils.py
semanas/: presenterm.md
semanas/00/: presentem.md
semanas/01/01_environment/: ambiente_demo.py
semanas/01_shell_ambiente/01_environment/: presenterm.md
semanas/01_shell_ambiente/02_install/: presenterm.md
semanas/01_shell_ambiente/03_virtualenv/: presenterm.md
semanas/02/01_interpreter/: presenterm.md
semanas/02/02_io/: presenterm.md
semanas/02/03_live/: codigo_escrito_durante_a_aula.py  loganv1.py  loganv3.py  make_logs.sh  presenterm.md
semanas/02_interpretador_io/03_live/: generate_log.py  loganv1.py  loganv2.py  presenterm.md
semanas/03/: mcp.md  ssh.md
semanas/03/02_http/: basic_auth.py  fastapi_rest_api.py  http_cache.py  http_server.py  presenterm.md  proxy_tunnel.py  requests_client.py  server_client_demo.py  sessions_cookies.py  urllib_client.py
semanas/03/03_rpc/: 01_xmlrpc_example.py  04_grpc_client.py  06_grpc_metrics.py  metrics.proto  presenterm.md
semanas/03/04_ssh/: 01_paramiko_basic_client.py  04_parallel_ssh.py  05_ansible_like_automation.py  06_jump_host_bastion.py  09_ssh_connection_pool.py  presenterm.md
semanas/03/05_mcp/: mcp_client.py
semanas/03_protocolos/01_sockets/: cliente_tcp_simples.py  cliente_udp_simples.py  presenterm.md  servidor_tcp_simples_one_connection_only.py
semanas/03_protocolos/02_http/: async_http.py  file_upload.py  http2_demo.py  http_monitor.py  rate_limiting_retry.py  streaming_responses.py
semanas/03_protocolos/03_rpc/: 02_jsonrpc_example.py  03_grpc_server.py  05_grpc_load_balancer.py
semanas/03_protocolos/04_ssh/: 02_sftp_operations.py  03_ssh_config_loader.py  07_strict_ssh_client.py  08_ssh_auditor.py  10_backup_manager_template.py
semanas/03_protocolos/05_mcp/: mcp_server.py  presenterm.md
semanas/04_sec_servicos/: 01_ssl_socket_example.py  02_https_request_socket.py  03_urllib_request_example.py  04_requests_example.py  05_https_server.py  06_password_hashing.py  07_secrets_managers.py  08_onepassword_cli.py  09_secure_logging.py  10_encrypted_secrets.py  11_pii_protection.py  12_data_masking.py  13_safe_error_handler.py  14_user_verification.py  15_security_analysis_tools.py  16_trivy_scan.py  17_k8s_security_scan.py  18_sbom_generator.py  19_k8s_cronjob.yaml  20_pip_config.conf  21_poetry_config.toml  gancho  op  presenterm.md  requirements.txt
semanas/05_serde/: .aula_3_json_toml_yaml.md.un~  .aulas.md.un~  aula_1_text_encoding.md  aula_2_csv_tsv_delimitados.md  aula_3_json_toml_yaml.md  aula_4_watchdog.md  aulas.md
semanas/05_serde/delimitados/: README.md  config.txt  dados_basicos.csv  dados_basicos.tsv  dados_merge_1.csv  dados_merge_2.csv  dados_merge_3.csv  funcionarios.csv  logs_sistema.csv  metricas.psv  pessoas.csv  problema_aspas.csv  problema_campos_vazios.csv  problema_colunas_inconsistentes.csv  problema_delimitador_misto.csv  problema_encoding_latin1.csv  problema_quebras_linha.csv  problema_sem_cabecalho.csv  problema_virgulas.csv  produtos.tsv  servidores.psv  usuarios.csv  vendas.csv  vendas_final.csv
semanas/05_serde/encoding/: README.md  acentuacao_para_remover.txt  ascii_sample.txt  latin1_sample.txt  mixed_corrupted.txt  utf16_sample.txt  utf8_sample.txt  windows1252_sample.txt
semanas/05_serde/estruturados/: README.md
semanas/06_cli/exemplos/app_com_multiplos_scripts/: README.md  pyproject.toml
semanas/06_cli/exemplos/app_com_multiplos_scripts/src/multi_tools/: cli.py  file_info.py
semanas/07_cli/: presenterm.md
semanas/07_cli/exemplos/monitor_tool/: pyproject.toml
semanas/07_typing_validation/: data.json  data_validation.py  pet.py  simple_typing.py
semanas/08_config/: aula.md  dash_dynaconf.py  dash_fernet.py  dash_vault.py
semanas/09_testes_qualidade/: async_client.py  async_client_rate.py  aula.md  cli.py  spec.json  sync_client.py
(+39 files in other folders)
