[project]
name = "gancho"
version = "0.1.3"
description = "Gancho receives webhooks and triggers actions in response."
license = { text = "AGPL-3.0" }
readme = "README.md"
authors = [
    { name = "Bruno Rocha", email = "rochacbruno@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
gancho = "gancho:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
